--- a/index.html
+++ b/index.html
@@ -3,85 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sergio Huertas | Portafolio</title>
+    <title>Sergio Huertas | Portafolio Profesional</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
-<header>
-    <nav class="navbar">
+<header class="header">
+    <nav class="navbar container">
         <h2 class="logo">Sergio Huertas</h2>
-        <ul>
-            <li><a href="#about">Sobre mí</a></li>
-            <li><a href="#skills">Habilidades</a></li>
-            <li><a href="#education">Educación</a></li>
+        <ul class="nav-links">
+            <li><a href="#about">Perfil</a></li>
+            <li><a href="#skills">Competencias</a></li>
+            <li><a href="#education">Formación</a></li>
             <li><a href="#contact">Contacto</a></li>
         </ul>
     </nav>
 </header>
 
-<main>
+<main class="container">
 
-<section class="hero">
-    <img src="img/profile.jpg" alt="Foto de Sergio" class="profile-img">
-    <h1>Sergio Huertas 👋</h1>
-    <p>Estudiante de Estadística | Ciencia de Datos | Análisis Cuantitativo</p>
-</section>
+    <!-- HERO / PRESENTACIÓN -->
+    <section class="hero">
+        <img src="img/profile.jpg" alt="Foto de Sergio Huertas" class="profile-img">
+        <h1>Sergio Huertas</h1>
+        <p class="subtitle">
+            Estudiante de Estadística | Ciencia de Datos | Análisis Cuantitativo y Riesgo
+        </p>
+    </section>
 
-<section id="about" class="section">
-    <h2>Sobre mí</h2>
-    <p>
-        Soy estudiante de octavo semestre de Estadística en la Universidad Santo Tomás.
-        Me especializo en análisis de datos, modelamiento estadístico y visualización
-        de información para la toma de decisiones basada en evidencia.
-    </p>
-    <p>
-        Me apasiona la tecnología, la programación y el uso de herramientas cuantitativas
-        para resolver problemas reales en el ámbito empresarial y científico.
-    </p>
-</section>
+    <!-- PERFIL PROFESIONAL -->
+    <section id="about" class="section">
+        <h2>Perfil profesional</h2>
+        <p>
+            Estudiante de octavo semestre de Estadística en la Universidad Santo Tomás,
+            con enfoque en análisis cuantitativo, modelamiento estadístico y apoyo a la
+            toma de decisiones estratégicas basadas en datos.
+        </p>
+        <p>
+            Poseo interés en el análisis de riesgos, ciencia de datos aplicada y el uso
+            de herramientas analíticas para la optimización de procesos en entornos
+            corporativos y financieros.
+        </p>
+    </section>
 
-<section id="skills" class="section">
-    <h2>Habilidades</h2>
-    <div class="card-container">
-        <div class="card">
-            <h3>Estadística</h3>
-            <p>Regresión, ANOVA, inferencia estadística, modelos predictivos.</p>
+    <!-- COMPETENCIAS -->
+    <section id="skills" class="section">
+        <h2>Competencias clave</h2>
+        <div class="card-container">
+            <div class="card">
+                <h3>Análisis Estadístico</h3>
+                <p>
+                    Regresión, inferencia estadística, ANOVA y modelos predictivos aplicados
+                    a escenarios reales de negocio.
+                </p>
+            </div>
+
+            <div class="card">
+                <h3>Programación y Datos</h3>
+                <p>
+                    Manejo de R, Python y SQL para análisis de datos, automatización de
+                    reportes y procesamiento de información.
+                </p>
+            </div>
+
+            <div class="card">
+                <h3>Visualización Ejecutiva</h3>
+                <p>
+                    Desarrollo de dashboards en Power BI orientados a indicadores clave
+                    y reportes para perfiles directivos.
+                </p>
+            </div>
         </div>
-        <div class="card">
-            <h3>Programación</h3>
-            <p>R, Python, SQL, análisis de datos y automatización.</p>
-        </div>
-        <div class="card">
-            <h3>Visualización</h3>
-            <p>Power BI, dashboards interactivos y reportes ejecutivos.</p>
-        </div>
-    </div>
-</section>
+    </section>
 
-<section id="education" class="section">
-    <h2>Educación</h2>
-    <p>
-        📍 Universidad Santo Tomás  
-        <br>
-        🎓 Pregrado en Estadística – 8° Semestre  
-    </p>
-</section>
+    <!-- FORMACIÓN -->
+    <section id="education" class="section">
+        <h2>Formación académica</h2>
+        <p>
+            <strong>Universidad Santo Tomás</strong><br>
+            Pregrado en Estadística – Octavo semestre
+        </p>
+    </section>
 
-<section id="contact" class="section">
-    <h2>Contacto</h2>
-    <p>Email: sergiohuertas@usantotomas.edu.co</p>
-    <p>Instagram: 
-        <a href="https://instagram.com/TU_USUARIO" target="_blank">
-            @TU_USUARIO
-        </a>
-    </p>
-</section>
+    <!-- CONTACTO -->
+    <section id="contact" class="section">
+        <h2>Contacto profesional</h2>
+        <p>Email: sergiohuertas@usantotomas.edu.co</p>
+        <p>
+            LinkedIn:
+            <a href="#" target="_blank">linkedin.com/in/sergiohuertas</a>
+        </p>
+    </section>
 
 </main>
 
-<footer>
+<footer class="footer">
     <p>© 2026 Sergio Huertas | Portafolio Profesional</p>
 </footer>
 
