--- a/index.html
+++ b/index.html
@@ -3,105 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sergio Huertas | Portafolio Profesional</title>
+    <title>Sergio Huertas | Analista Cuantitativo</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
-<header class="header">
-    <nav class="navbar container">
+<header>
+    <nav class="navbar">
         <h2 class="logo">Sergio Huertas</h2>
-        <ul class="nav-links">
+        <ul>
             <li><a href="#about">Perfil</a></li>
-            <li><a href="#skills">Competencias</a></li>
+            <li><a href="#skills">Especialidades</a></li>
             <li><a href="#education">Formación</a></li>
             <li><a href="#contact">Contacto</a></li>
         </ul>
     </nav>
 </header>
 
-<main class="container">
+<main>
 
-    <!-- HERO / PRESENTACIÓN -->
-    <section class="hero">
-        <img src="img/profile.jpg" alt="Foto de Sergio Huertas" class="profile-img">
-        <h1>Sergio Huertas</h1>
-        <p class="subtitle">
-            Estudiante de Estadística | Ciencia de Datos | Análisis Cuantitativo y Riesgo
-        </p>
-    </section>
+<section class="hero">
+    <img src="img/profile.jpg" alt="Foto de Sergio Huertas" class="profile-img">
+    <h1>Sergio Huertas</h1>
+    <p>
+        Estudiante de Estadística · Analista de Datos · Enfoque en Análisis Cuantitativo y Riesgo
+    </p>
+</section>
 
-    <!-- PERFIL PROFESIONAL -->
-    <section id="about" class="section">
-        <h2>Perfil profesional</h2>
-        <p>
-            Estudiante de octavo semestre de Estadística en la Universidad Santo Tomás,
-            con enfoque en análisis cuantitativo, modelamiento estadístico y apoyo a la
-            toma de decisiones estratégicas basadas en datos.
-        </p>
-        <p>
-            Poseo interés en el análisis de riesgos, ciencia de datos aplicada y el uso
-            de herramientas analíticas para la optimización de procesos en entornos
-            corporativos y financieros.
-        </p>
-    </section>
+<section id="about" class="section">
+    <h2>Perfil Profesional</h2>
+    <p>
+        Estudiante de octavo semestre de Estadística en la Universidad Santo Tomás, con formación
+        en análisis de datos, modelamiento estadístico y visualización de información para la toma
+        de decisiones estratégicas.
+    </p>
+    <p>
+        Interesado en el análisis de riesgos, ciencia de datos y consultoría analítica, aplicando
+        metodologías cuantitativas a problemas reales del entorno empresarial y financiero.
+    </p>
+</section>
 
-    <!-- COMPETENCIAS -->
-    <section id="skills" class="section">
-        <h2>Competencias clave</h2>
-        <div class="card-container">
-            <div class="card">
-                <h3>Análisis Estadístico</h3>
-                <p>
-                    Regresión, inferencia estadística, ANOVA y modelos predictivos aplicados
-                    a escenarios reales de negocio.
-                </p>
-            </div>
-
-            <div class="card">
-                <h3>Programación y Datos</h3>
-                <p>
-                    Manejo de R, Python y SQL para análisis de datos, automatización de
-                    reportes y procesamiento de información.
-                </p>
-            </div>
-
-            <div class="card">
-                <h3>Visualización Ejecutiva</h3>
-                <p>
-                    Desarrollo de dashboards en Power BI orientados a indicadores clave
-                    y reportes para perfiles directivos.
-                </p>
-            </div>
+<section id="skills" class="section">
+    <h2>Especialidades</h2>
+    <div class="card-container">
+        <div class="card">
+            <h3>Análisis Estadístico</h3>
+            <p>Inferencia estadística, regresión, ANOVA, modelos predictivos y análisis de riesgo.</p>
         </div>
-    </section>
+        <div class="card">
+            <h3>Programación</h3>
+            <p>Python, R y SQL aplicados a análisis de datos, automatización y modelamiento.</p>
+        </div>
+        <div class="card">
+            <h3>Visualización & BI</h3>
+            <p>Power BI, dashboards ejecutivos y comunicación efectiva de resultados.</p>
+        </div>
+    </div>
+</section>
 
-    <!-- FORMACIÓN -->
-    <section id="education" class="section">
-        <h2>Formación académica</h2>
-        <p>
-            <strong>Universidad Santo Tomás</strong><br>
-            Pregrado en Estadística – Octavo semestre
-        </p>
-    </section>
+<section id="education" class="section">
+    <h2>Formación Académica</h2>
+    <p>
+        🎓 <strong>Universidad Santo Tomás</strong><br>
+        Pregrado en Estadística – Octavo semestre
+    </p>
+</section>
 
-    <!-- CONTACTO -->
-    <section id="contact" class="section">
-        <h2>Contacto profesional</h2>
-        <p>Email: sergiohuertas@usantotomas.edu.co</p>
-        <p>
-            LinkedIn:
-            <a href="#" target="_blank">linkedin.com/in/sergiohuertas</a>
-        </p>
-    </section>
+<section id="contact" class="section">
+    <h2>Contacto</h2>
+    <p>Email: sergiohuertas@usantotomas.edu.co</p>
+    <p>
+        LinkedIn:
+        <a href="https://linkedin.com/in/TU_USUARIO" target="_blank">
+            linkedin.com/in/TU_USUARIO
+        </a>
+    </p>
+</section>
 
 </main>
 
-<footer class="footer">
-    <p>© 2026 Sergio Huertas | Portafolio Profesional</p>
+<footer>
+    <p>© 2026 Sergio Huertas · Portafolio Profesional</p>
 </footer>
 
-<script src="js/main.js"></script>
 </body>
 </html>
